--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <br>
 
-  <img src="C:/Users/Kyle/Pictures/rsXAS9r.png" alt="">
+  <img src="rsXAS9r.png" alt="">
   <br>
   <a href="contacts.html">contacts</a>
   <a href="https://www.google.com/">Link</a>
